guery-core/src/main/java/nz/ac/massey/cs/guery/io/dsl/gueryParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g 2010-07-26 13:39:38

package nz.ac.massey.cs.guery.io.dsl;

import com.google.common.base.Predicate;
import com.google.common.collect.Collections2;
import nz.ac.massey.cs.guery.*;
import nz.ac.massey.cs.guery.mvel.CompiledGroupByClause;
import nz.ac.massey.cs.guery.mvel.CompiledPropertyConstraint;
import org.antlr.runtime.*;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.TreeAdaptor;

import java.util.ArrayList;
import java.util.Collection;
import java.util.List;

public class gueryParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "INT", "COMMENT", "NL", "ESC_SEQ", "STRING", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "CLASS_NAME", "'motif'", "'select'", "','", "'['", "'*'", "']'", "'find all'", "'prepare with'", "'('", "'>'", "')'", "'connected by'", "'and'", "'not connected by'", "'where'", "'group by'"
    };
    public static final int T__29 = 29;
    public static final int T__28 = 28;
    public static final int CLASS_NAME = 13;
    public static final int T__27 = 27;
    public static final int T__26 = 26;
    public static final int T__25 = 25;
    public static final int T__24 = 24;
    public static final int T__23 = 23;
    public static final int T__22 = 22;
    public static final int T__21 = 21;
    public static final int UNICODE_ESC = 11;
    public static final int T__20 = 20;
    public static final int OCTAL_ESC = 12;
    public static final int HEX_DIGIT = 10;
    public static final int INT = 5;
    public static final int ID = 4;
    public static final int EOF = -1;
    public static final int T__19 = 19;
    public static final int ESC_SEQ = 8;
    public static final int T__16 = 16;
    public static final int T__15 = 15;
    public static final int T__18 = 18;
    public static final int T__17 = 17;
    public static final int T__14 = 14;
    public static final int NL = 7;
    public static final int COMMENT = 6;
    public static final int STRING = 9;

    // delegates
    // delegators
    public static final BitSet FOLLOW_declaration_in_query427 = new BitSet(new long[]{0x0000000000208000L});
    public static final BitSet FOLLOW_prepare_in_query430 = new BitSet(new long[]{0x0000000000208000L});
    public static final BitSet FOLLOW_select_in_query433 = new BitSet(new long[]{0x000000003A208002L});
    public static final BitSet FOLLOW_connected_by_in_query437 = new BitSet(new long[]{0x000000003A000002L});
    public static final BitSet FOLLOW_not_connected_by_in_query439 = new BitSet(new long[]{0x000000003A000002L});
    public static final BitSet FOLLOW_where_in_query441 = new BitSet(new long[]{0x000000003A000002L});
    public static final BitSet FOLLOW_groupby_in_query445 = new BitSet(new long[]{0x0000000020000002L});
    public static final BitSet FOLLOW_14_in_declaration456 = new BitSet(new long[]{0x0000000000000010L});
    public static final BitSet FOLLOW_ID_in_declaration460 = new BitSet(new long[]{0x0000000000000080L});
    public static final BitSet FOLLOW_NL_in_declaration463 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_15_in_select476 = new BitSet(new long[]{0x0000000000000010L});
    public static final BitSet FOLLOW_ID_in_select480 = new BitSet(new long[]{0x0000000000010082L});
    public static final BitSet FOLLOW_16_in_select484 = new BitSet(new long[]{0x0000000000000010L});
    public static final BitSet FOLLOW_ID_in_select487 = new BitSet(new long[]{0x0000000000010082L});
    public static final BitSet FOLLOW_NL_in_select492 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_17_in_path_length_constraint517 = new BitSet(new long[]{0x0000000000000020L});
    public static final BitSet FOLLOW_INT_in_path_length_constraint521 = new BitSet(new long[]{0x0000000000010000L});
    public static final BitSet FOLLOW_16_in_path_length_constraint525 = new BitSet(new long[]{0x0000000000040020L});
    public static final BitSet FOLLOW_set_in_path_length_constraint529 = new BitSet(new long[]{0x0000000000080000L});
    public static final BitSet FOLLOW_19_in_path_length_constraint538 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_20_in_find_all561 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_21_in_prepare572 = new BitSet(new long[]{0x0000000000000010L});
    public static final BitSet FOLLOW_ID_in_prepare576 = new BitSet(new long[]{0x0000000000000080L});
    public static final BitSet FOLLOW_NL_in_prepare580 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_ID_in_connected_by_single593 = new BitSet(new long[]{0x0000000000400000L});
    public static final BitSet FOLLOW_22_in_connected_by_single595 = new BitSet(new long[]{0x0000000000000010L});

    ;
    public static final BitSet FOLLOW_ID_in_connected_by_single599 = new BitSet(new long[]{0x0000000000800000L});
    // $ANTLR end "query"
    public static final BitSet FOLLOW_23_in_connected_by_single601 = new BitSet(new long[]{0x0000000000000010L});

    ;
    public static final BitSet FOLLOW_ID_in_connected_by_single605 = new BitSet(new long[]{0x0000000001000000L});
    // $ANTLR end "declaration"
    public static final BitSet FOLLOW_24_in_connected_by_single607 = new BitSet(new long[]{0x0000000000120000L});

    ;
    public static final BitSet FOLLOW_path_length_constraint_in_connected_by_single612 = new BitSet(new long[]{0x0000000000100000L});
    // $ANTLR end "select"
    public static final BitSet FOLLOW_find_all_in_connected_by_single618 = new BitSet(new long[]{0x0000000000000002L});

    ;
    public static final BitSet FOLLOW_ID_in_not_connected_by_single630 = new BitSet(new long[]{0x0000000000400000L});
    // $ANTLR end "path_length_constraint"
    public static final BitSet FOLLOW_22_in_not_connected_by_single632 = new BitSet(new long[]{0x0000000000000010L});

    ;
    public static final BitSet FOLLOW_ID_in_not_connected_by_single636 = new BitSet(new long[]{0x0000000000800000L});
    // $ANTLR end "find_all"
    public static final BitSet FOLLOW_23_in_not_connected_by_single638 = new BitSet(new long[]{0x0000000000000010L});

    ;
    public static final BitSet FOLLOW_ID_in_not_connected_by_single642 = new BitSet(new long[]{0x0000000001000000L});
    // $ANTLR end "prepare"
    public static final BitSet FOLLOW_24_in_not_connected_by_single644 = new BitSet(new long[]{0x0000000000120000L});

    ;
    public static final BitSet FOLLOW_path_length_constraint_in_not_connected_by_single649 = new BitSet(new long[]{0x0000000000100000L});
    // $ANTLR end "connected_by_single"
    public static final BitSet FOLLOW_find_all_in_not_connected_by_single655 = new BitSet(new long[]{0x0000000000000002L});

    ;
    public static final BitSet FOLLOW_25_in_connected_by669 = new BitSet(new long[]{0x0000000000000010L});
    // $ANTLR end "not_connected_by_single"
    public static final BitSet FOLLOW_connected_by_single_in_connected_by671 = new BitSet(new long[]{0x0000000004000082L});

    ;
    public static final BitSet FOLLOW_26_in_connected_by674 = new BitSet(new long[]{0x0000000000000010L});
    // $ANTLR end "connected_by"
    public static final BitSet FOLLOW_connected_by_single_in_connected_by676 = new BitSet(new long[]{0x0000000004000082L});

    ;
    public static final BitSet FOLLOW_NL_in_connected_by680 = new BitSet(new long[]{0x0000000000000002L});
    // $ANTLR end "not_connected_by"
    public static final BitSet FOLLOW_27_in_not_connected_by688 = new BitSet(new long[]{0x0000000000000010L});

    ;
    public static final BitSet FOLLOW_not_connected_by_single_in_not_connected_by690 = new BitSet(new long[]{0x0000000004000082L});
    // $ANTLR end "constraint"
    public static final BitSet FOLLOW_26_in_not_connected_by693 = new BitSet(new long[]{0x0000000000000010L});

    ;
    public static final BitSet FOLLOW_not_connected_by_single_in_not_connected_by695 = new BitSet(new long[]{0x0000000004000082L});
    // $ANTLR end "where"
    public static final BitSet FOLLOW_NL_in_not_connected_by699 = new BitSet(new long[]{0x0000000000000002L});

    ;
    public static final BitSet FOLLOW_STRING_in_constraint710 = new BitSet(new long[]{0x0000000000000082L});
    // $ANTLR end "aggregation_clause"
    public static final BitSet FOLLOW_NL_in_constraint713 = new BitSet(new long[]{0x0000000000000002L});

    ;
    public static final BitSet FOLLOW_28_in_where727 = new BitSet(new long[]{0x0000000000000200L});
    // $ANTLR end "groupby"

    // Delegated rules
    public static final BitSet FOLLOW_constraint_in_where729 = new BitSet(new long[]{0x0000000004000082L});
    public static final BitSet FOLLOW_26_in_where732 = new BitSet(new long[]{0x0000000000000200L});
    public static final BitSet FOLLOW_constraint_in_where734 = new BitSet(new long[]{0x0000000004000082L});
    public static final BitSet FOLLOW_NL_in_where738 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_STRING_in_aggregation_clause749 = new BitSet(new long[]{0x0000000000000082L});
    public static final BitSet FOLLOW_NL_in_aggregation_clause752 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_29_in_groupby764 = new BitSet(new long[]{0x0000000000000200L});
    public static final BitSet FOLLOW_aggregation_clause_in_groupby766 = new BitSet(new long[]{0x0000000004000082L});
    public static final BitSet FOLLOW_26_in_groupby769 = new BitSet(new long[]{0x0000000000000200L});
    public static final BitSet FOLLOW_aggregation_clause_in_groupby771 = new BitSet(new long[]{0x0000000004000082L});
    public static final BitSet FOLLOW_NL_in_groupby775 = new BitSet(new long[]{0x0000000000000002L});
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();
    private DefaultMotif motif = new DefaultMotif();
    private List<String> constraintDefs = new ArrayList<String>();
    private ClassLoader processorClassLoader = this.getClass().getClassLoader();
    public gueryParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public gueryParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);

    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public String[] getTokenNames() {
        return gueryParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "/Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g";
    }

    public ClassLoader getProcessorClassLoader() {
        return processorClassLoader;
    }

    public void setProcessorClassLoader(ClassLoader processorClassLoader) {
        this.processorClassLoader = processorClassLoader;
    }

    public Motif getMotif() {
        return motif;
    }

    private void exception(String message, Token token) {
        StringBuffer b = new StringBuffer();
        b.append(message);
        b.append(" Position: row ");
        b.append(token.getLine());
        b.append(", column ");
        b.append(token.getCharPositionInLine());
        b.append(".");
        exception(b.toString());
    }

    private void exception(String message, Token token, Exception cause) {
        StringBuffer b = new StringBuffer();
        b.append(message);
        b.append(" Position: row ");
        b.append(token.getLine());
        b.append(", column ");
        b.append(token.getCharPositionInLine());
        b.append(".");
        exception(b.toString(), cause);
    }

    private void exception(String message) {
        throw new SemanticException(message);
    }

    private void exception(String message, Exception cause) {
        throw new SemanticException(message, cause);
    }

    private int intValue(Token t) {
        return Integer.parseInt(t.getText());
    }

    private void addVertexRole(Token roleT) {
        String role = roleT.getText();
        motif.getRoles().add(role);
    }

    private void addConstraint(Token constraintT) {
        PropertyConstraint constraint = buildConstraint(constraintT);

        // try to attach constraint directly to path constraint
        Collection<PathConstraint> pathConstraints = Collections2.filter(motif.getConstraints(), new Predicate() {
            @Override
            public boolean apply(Object arg) {
                return arg instanceof PathConstraint;
            }
        });
        for (PathConstraint pc : pathConstraints) {
            if (constraint.getRoles().size() == 1 && constraint.getFirstRole().equals(pc.getRole())) {
                // attach property constraint to path constraint - this means that it will be evaluated
                // immediately if paths are explored
                pc.addConstraint(constraint);
                return;
            }
        }
        // else, add constraint to list of "global" constraints
        motif.getConstraints().add(constraint);

    }

    private void addGroupBy(Token groupByT) {
        String def = removeDoubleQuotes(groupByT.getText());
        CompiledGroupByClause clause = new CompiledGroupByClause(def);
        String role = clause.getRole();
        if (!motif.getRoles().contains(role)) {
            exception("Group by clause " + def + " does contain an input that has not been declared as a role ", groupByT);
        }
        motif.getGroupByClauses().add(clause);
    }

    private void addProcessor(Token classNameT) {
        String className = classNameT.getText();
        Class clazz = null;
        try {
            clazz = processorClassLoader.loadClass(className);
        } catch (ClassNotFoundException e) {
            exception("Processor class " + className + " cannot be loaded", e);
        }
        if (!Processor.class.isAssignableFrom(clazz)) {
            exception("Class " + className + " does not implement " + Processor.class.getName());
        }
        try {
            Processor processor = (Processor) clazz.newInstance();
            motif.getGraphProcessors().add(processor);
        } catch (Exception e) {
            exception("Processor class " + className + " cannot be instantiated", e);
        }
    }

    private void addPathRole(Token roleT, Token fromT, Token toT, PathLengthConstraint c, boolean findAll, boolean negated) {
        String source = fromT.getText();
        String target = toT.getText();
        String role = roleT.getText();
        if (motif.getPathRoles().contains(role)) {
            exception("Path role " + role + " is already defined", roleT);
        }
        if (!motif.getRoles().contains(source)) {
            exception("Source vertex role not defined for path role " + role, fromT);
        }
        if (!motif.getRoles().contains(target)) {
            exception("Target vertex role not defined for path role " + role, toT);
        }
        if (negated) motif.getNegatedPathRoles().add(role);
        else motif.getPathRoles().add(role);


        // build path constraint
        PathConstraint constraint = new PathConstraint();
        constraint.setRole(role);
        constraint.setSource(source);
        constraint.setTarget(target);
        constraint.setNegated(false);
        constraint.setMinLength(c == null ? 1 : c.getMinLength());
        constraint.setMaxLength(c == null ? -1 : c.getMaxLength());
        constraint.setComputeAll(findAll);
        constraint.setNegated(negated);

        motif.getConstraints().add(constraint);
    }

    private String removeDoubleQuotes(String s) {
        if (s.charAt(0) == '\"' && s.charAt(s.length() - 1) == '\"') {
            return s.substring(1, s.length() - 1);
        } else {
            return s;
        }
    }

    private PropertyConstraint buildConstraint(Token constraintDefT) {
        String constraintDef = removeDoubleQuotes(constraintDefT.getText());
        CompiledPropertyConstraint constraint = null;
        try {
            constraint = new CompiledPropertyConstraint(constraintDef);
        } catch (Exception x) {
            exception("Error compiling mvel expression " + constraintDef, constraintDefT, x);
        }
        // check whether inputs are in roles
        for (String role : constraint.getRoles()) {
            if (!motif.getRoles().contains(role) && !motif.getPathRoles().contains(role) && !motif.getNegatedPathRoles().contains(role)) {
                exception("The expression " + constraintDef + "contains the variable " + role + " which has not yet been declared as a role", constraintDefT);
            }
        }

        return constraint;
    }

    // $ANTLR start "query"
    // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:1: query : ( declaration )? ( prepare )* ( select )+ ( connected_by | not_connected_by | where )* ( groupby )* ;
    public final gueryParser.query_return query() throws RecognitionException {
        gueryParser.query_return retval = new gueryParser.query_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        gueryParser.declaration_return declaration1 = null;

        gueryParser.prepare_return prepare2 = null;

        gueryParser.select_return select3 = null;

        gueryParser.connected_by_return connected_by4 = null;

        gueryParser.not_connected_by_return not_connected_by5 = null;

        gueryParser.where_return where6 = null;

        gueryParser.groupby_return groupby7 = null;


        try {
            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:7: ( ( declaration )? ( prepare )* ( select )+ ( connected_by | not_connected_by | where )* ( groupby )* )
            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:9: ( declaration )? ( prepare )* ( select )+ ( connected_by | not_connected_by | where )* ( groupby )*
            {
                root_0 = (CommonTree) adaptor.nil();

                // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:9: ( declaration )?
                int alt1 = 2;
                int LA1_0 = input.LA(1);

                if ((LA1_0 == 14)) {
                    alt1 = 1;
                }
                switch (alt1) {
                    case 1:
                        // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:9: declaration
                    {
                        pushFollow(FOLLOW_declaration_in_query427);
                        declaration1 = declaration();

                        state._fsp--;

                        adaptor.addChild(root_0, declaration1.getTree());

                    }
                    break;

                }

                // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:22: ( prepare )*
                loop2:
                do {
                    int alt2 = 2;
                    int LA2_0 = input.LA(1);

                    if ((LA2_0 == 21)) {
                        alt2 = 1;
                    }


                    switch (alt2) {
                        case 1:
                            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:22: prepare
                        {
                            pushFollow(FOLLOW_prepare_in_query430);
                            prepare2 = prepare();

                            state._fsp--;

                            adaptor.addChild(root_0, prepare2.getTree());

                        }
                        break;

                        default:
                            break loop2;
                    }
                } while (true);

                // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:31: ( select )+
                int cnt3 = 0;
                loop3:
                do {
                    int alt3 = 2;
                    int LA3_0 = input.LA(1);

                    if ((LA3_0 == 15)) {
                        alt3 = 1;
                    }


                    switch (alt3) {
                        case 1:
                            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:31: select
                        {
                            pushFollow(FOLLOW_select_in_query433);
                            select3 = select();

                            state._fsp--;

                            adaptor.addChild(root_0, select3.getTree());

                        }
                        break;

                        default:
                            if (cnt3 >= 1) break loop3;
                            EarlyExitException eee =
                                    new EarlyExitException(3, input);
                            throw eee;
                    }
                    cnt3++;
                } while (true);

                // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:39: ( connected_by | not_connected_by | where )*
                loop4:
                do {
                    int alt4 = 4;
                    switch (input.LA(1)) {
                        case 25: {
                            alt4 = 1;
                        }
                        break;
                        case 27: {
                            alt4 = 2;
                        }
                        break;
                        case 28: {
                            alt4 = 3;
                        }
                        break;

                    }

                    switch (alt4) {
                        case 1:
                            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:40: connected_by
                        {
                            pushFollow(FOLLOW_connected_by_in_query437);
                            connected_by4 = connected_by();

                            state._fsp--;

                            adaptor.addChild(root_0, connected_by4.getTree());

                        }
                        break;
                        case 2:
                            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:53: not_connected_by
                        {
                            pushFollow(FOLLOW_not_connected_by_in_query439);
                            not_connected_by5 = not_connected_by();

                            state._fsp--;

                            adaptor.addChild(root_0, not_connected_by5.getTree());

                        }
                        break;
                        case 3:
                            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:70: where
                        {
                            pushFollow(FOLLOW_where_in_query441);
                            where6 = where();

                            state._fsp--;

                            adaptor.addChild(root_0, where6.getTree());

                        }
                        break;

                        default:
                            break loop4;
                    }
                } while (true);

                // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:78: ( groupby )*
                loop5:
                do {
                    int alt5 = 2;
                    int LA5_0 = input.LA(1);

                    if ((LA5_0 == 29)) {
                        alt5 = 1;
                    }


                    switch (alt5) {
                        case 1:
                            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:226:78: groupby
                        {
                            pushFollow(FOLLOW_groupby_in_query445);
                            groupby7 = groupby();

                            state._fsp--;

                            adaptor.addChild(root_0, groupby7.getTree());

                        }
                        break;

                        default:
                            break loop5;
                    }
                } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }

    // $ANTLR start "declaration"
    // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:228:1: declaration : 'motif' n= ID NL ;
    public final gueryParser.declaration_return declaration() throws RecognitionException {
        gueryParser.declaration_return retval = new gueryParser.declaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token n = null;
        Token string_literal8 = null;
        Token NL9 = null;

        CommonTree n_tree = null;
        CommonTree string_literal8_tree = null;
        CommonTree NL9_tree = null;

        try {
            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:228:14: ( 'motif' n= ID NL )
            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:228:16: 'motif' n= ID NL
            {
                root_0 = (CommonTree) adaptor.nil();

                string_literal8 = (Token) match(input, 14, FOLLOW_14_in_declaration456);
                string_literal8_tree = (CommonTree) adaptor.create(string_literal8);
                adaptor.addChild(root_0, string_literal8_tree);

                n = (Token) match(input, ID, FOLLOW_ID_in_declaration460);
                n_tree = (CommonTree) adaptor.create(n);
                adaptor.addChild(root_0, n_tree);

                motif.setName(n.getText());
                NL9 = (Token) match(input, NL, FOLLOW_NL_in_declaration463);
                NL9_tree = (CommonTree) adaptor.create(NL9);
                adaptor.addChild(root_0, NL9_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }

    // $ANTLR start "select"
    // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:230:1: select : 'select' vertex= ID ( ',' vertex= ID )* ( NL )? ;
    public final gueryParser.select_return select() throws RecognitionException {
        gueryParser.select_return retval = new gueryParser.select_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token vertex = null;
        Token string_literal10 = null;
        Token char_literal11 = null;
        Token NL12 = null;

        CommonTree vertex_tree = null;
        CommonTree string_literal10_tree = null;
        CommonTree char_literal11_tree = null;
        CommonTree NL12_tree = null;

        try {
            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:230:8: ( 'select' vertex= ID ( ',' vertex= ID )* ( NL )? )
            // /Users/jbdietri/development/gql4jung/workspace/guery/grammar/guery.g:230:10: 'select' vertex= ID ( ',' vertex= ID )* ( NL )?
            {
                root_0 = (CommonTree) adaptor.nil();

                string_literal10 = (Token) match(input, 15, FOLLOW_15_in_select476);
                string_literal10_tree = (CommonTree) adaptor.create(string_literal10);
                adaptor.addChild(root_0, string_literal10_tree);

                vertex = (Token) match(input, ID, FOLLOW_ID_in_select480);
                vertex_tree = (CommonTree) adaptor.create(vertex);
                adaptor.addChild(root_0, vertex_tree);
